# OS_Eindopdracht

./: .gitignore  CMakeLists.txt  OS_namespaces.h  ThreadManager.cpp  ThreadManager.hpp  ThreadWorker.cpp  ThreadWorker.hpp  block.cpp  block.h  blockqueue.cpp  blockqueue.h  blockqueuefiller.cpp  blockqueuefiller.h  coefficients.cpp  coefficients.h  config.hpp  main.cpp  options.cpp  options.h  playpcm
ATE_BlockQueue/: block.cpp  block.h  block.hpp  blockqueue.cpp  blockqueue.h  blockqueue.hpp
ATE_Threading/: ThreadManager.cpp  ThreadManager.hpp  ThreadWorker.cpp  ThreadWorker.hpp
ATE_Threading/Workers/: BlockProcessor.cpp  BlockProcessor.hpp  blockqueuefiller.cpp  blockqueuefiller.h  blockqueuefiller.hpp
ATE_Util/: coefficients.cpp  coefficients.h  coefficients.hpp  options.cpp  options.h  options.hpp  wait.hpp
